--- a/consummer/build.gradle
+++ b/consummer/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile('org.springframework.cloud:spring-cloud-starter-hystrix')
     compile('io.pivotal.spring.cloud:spring-cloud-services-starter-circuit-breaker')
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.cloud:spring-cloud-starter-config')
     // https://mvnrepository.com/artifact/com.netflix.hystrix/hystrix-dashboard
     compile group: 'com.netflix.hystrix', name: 'hystrix-dashboard', version: '1.2.16'
     testCompile('org.springframework.boot:spring-boot-starter-test')
@@ -45,3 +46,4 @@ dependencyManagement {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
 }
+
