--- a/recommended/build.gradle
+++ b/recommended/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-config')
 	compile('org.springframework.cloud:spring-cloud-starter-eureka')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.cloud:spring-cloud-starter-ribbon')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
