--- a/server-config/src/main/resources/application.yml
+++ b/server-config/src/main/resources/application.yml
@@ -1,8 +1,30 @@
-server:
-  port: 9090
 spring:
   cloud:
+    bus:
+      enabled: false
     config:
       server:
         git:
           uri: https://github.com/mar-celohenrique/config-files-server
+  profiles:
+    active: config-monitor
+
+
+---
+
+spring:
+  profiles: config-monitor
+  cloud:
+    bus:
+      enabled: true
+    config:
+      server:
+        monitor:
+          github:
+            enable: true
+  rabbitmq:
+    host: termite.rmq.cloudamqp.com
+    port: 5672
+    virtual-host: yyogrobz
+    username: yyogrobz
+    password: BBXDbPyZZvP1nUi0Y5y-5midvANB_sNe
