--- a/ehcache/src/main/resources/application.properties
+++ b/ehcache/src/main/resources/application.properties
@@ -1,11 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/hibernate
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.platform=postgres
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database=POSTGRESQL
+spring.datasource.url=jdbc:h2:mem:foo
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
 spring.cache.ehcache.config=classpath*:ehcache.xml
